--- a/01-layout-resume/styles.css
+++ b/01-layout-resume/styles.css
@@ -117,7 +117,7 @@ img {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    border: 10px solid #f08ef0;
+    border: 8px solid #f08ef0;
     animation: move2 10s ease-in infinite;
 }
 
@@ -168,19 +168,19 @@ img {
 
 @keyframes move2 {
     0% {
-        margin-top: 20%;
-        margin-left: 40%
-    }
-    50% {
-        margin-top: 10%;
-        margin-left: 40%
-    }
-    70% {
         margin-top: 15%;
         margin-left: 40%
     }
+    50% {
+        margin-top: 5%;
+        margin-left: 40%
+    }
+    70% {
+        margin-top: 10%;
+        margin-left: 40%
+    }
     100% {
-        margin-top: 20%;
+        margin-top: 15%;
         margin-left: 40%;
     }
 }
@@ -225,7 +225,10 @@ img {
     .circle1 {
         display: none; 
     }
-
+    .circle2 {
+        width: 200px;
+        height: 200px; 
+    }
     .triangle {
         display: none; 
     }
@@ -517,7 +520,7 @@ h2 {
     margin-right: 30px;
 }
 
-.company-logo {
+/* .company-logo {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -534,19 +537,19 @@ h2 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .company-logo {
         width: 30px;
         height: 30px;
     }
-}
+} */
 
 .job-title {
     font-weight: bold;
-    font-size: 20px;
-    margin: 0;
+    font-size: 18px;
+    /* margin: 0; */
 }
 
 
@@ -789,7 +792,7 @@ footer p {
 
 /* 手機 */
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .header {
         flex-wrap: wrap;
         align-items: stretch;
