--- a/02-layout-restaurant/styles.css
+++ b/02-layout-restaurant/styles.css
@@ -12,8 +12,8 @@ header {
     position: absolute;
     top: 0;
     right: auto;
-    width: 270px;
-    padding: 50px 53px 0;
+    width: 50%;
+    padding: 50px 3% 0;
 }
 dd {
     display: block;
@@ -166,15 +166,18 @@ li {
 /* -- 首頁影片 -- */
 .movie {
     position: relative;
-    margin: 3.75rem 15.8rem 0;
-    width: 70.5rem;
+    margin: 3.75rem auto 0;
+    max-width: 70.5rem;
     height: auto;
+    margin-left: 18%;
 }
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
     overflow: hidden;
-    border-radius: 1.6rem; 
+    border-radius: 1.6rem;
+    width: 100%;
+    height: 100%;
 }
 .video-container video {
     position: absolute;
@@ -182,6 +185,7 @@ li {
     left: 0;
     width: 100%;
     height: 100%;
+    object-fit: contain;
 }
 
 /* -- sns -- */
@@ -705,9 +709,9 @@ li {
 .menu-carousel {
     position: absolute;
     top: 15.25rem;
-    left: 55%;
-    width: 57rem;
-    margin: 0 0 0 -17.1875rem;
+    left: 53%;
+    width: 59%;
+    margin: 0 0 0 -14.5rem;
 }
 .swiper-wrapper {
     display: flex;
@@ -719,7 +723,7 @@ li {
 /* card */
 .menu-card {
     flex: 0 0 auto;
-    padding: 0 1.5625rem;
+    padding: 0 1.5rem;
     width: 23rem;
 }
 .menu-card-link {
